Fix CSS layout issues

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,6 @@
 
 @import "./variables.css";
 
-body{
-    background:red !important;
-}
-
 /* ==========================================
    GLOBAL RESET
 ========================================== */
